Adopt changes required for running deploy jobs with Java 17
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>